--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -68,6 +68,13 @@ body {
     margin-left: 30px;
     margin-top: 2px;
 }
+
+.iconsItems {
+    height: 5%;
+    width: 5%;
+    margin: 2px;
+}
+
 .iconsMonstro {
     height: 5%;
     width: 5%;
@@ -295,4 +302,27 @@ h3 {
     font-family: Verdana;
     font-size: 16px;
     text-shadow:1px 1px 1px black;
+}
+
+.imagemblood {
+    background-size: cover;
+    opacity: 0.4;
+    width:70%;
+}
+.puttop {
+    position:fixed;
+    top: 25%;
+    left: 20%;
+    width:70%;
+}
+.imagemgatopreto {
+    position: fixed;
+    top: 60%;
+    left: 60%;
+    width: 50%;
+}
+.iconsGold {
+    height: 18%;
+    width: 15%;
+    margin: 2px;
 }
