--- a/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
+++ b/SetepassosPRJ/Views/Jogo/JogoIniciado.cshtml
@@ -42,16 +42,27 @@
                 }
                 @Model.Nome
             </div>
-            <div>
-                <img src="~/images/Icons/icon-vida.png" class="icons" />  <strong>@Model.PontosVida</strong>  <p class="MensagemVidaPos">@Model.MensagemVidaPos</p> <p class="MensagemVidaNeg">@Model.MensagemVidaNeg</p>  <p class="MensagemPassarTempo">  @Model.MensagemPassarTempo</p>
-            </div>
+           
         </div>
-        <div class="col-sm-8">
+        <div class="col-sm-3">
+            @if (Model.Monstro == true || Model.UltimaAccao == PlayerAction.Attack)
+            {
+                <div class="text-center">
+                    <img src="~/images/Icons/icon-monstro-luck.png" /> <strong>@Model.PontosSorteMonstro</strong>
+                    <img src="~/images/Icons/icon-monstro-forca.png" /> <strong>@Model.PontosAtaqueMonstro</strong>
+                    <img src="~/images/Icons/icon-monstro-vida.png" /> <strong>@Model.PontosVidaMonstro</strong> <p class="MensagemDano">@Model.MensagemDano</p>
+                </div>
+                <div>
+                    <p class="MensagemMeuAtaque text-center">@Model.MensagemMeuAtaque</p>
+                </div>
+            }
+        </div>
+        <div class="col-sm-5">
             <div class="text-center">
                 <img src="~/images/MiniMap/mini-n-sala@(Model.Sala).png" />
             </div>
         </div>
-        <div class="col-sm-2 text-center">
+        <div class="col-sm-2 text-left">
             <div>
                 @if (Model.Chave)
                 {
@@ -69,6 +80,9 @@
         <div class="col-sm-2">
             <div class="areadados">
 
+                <div>
+                    <img src="~/images/Icons/icon-vida.png" class="icons" />  <strong>@Model.PontosVida</strong>  <p class="MensagemVidaPos">@Model.MensagemVidaPos</p> <p class="MensagemVidaNeg">@Model.MensagemVidaNeg</p>  <p class="MensagemPassarTempo">  @Model.MensagemPassarTempo</p>
+                </div>
                 <div>
                     <img src="~/images/Icons/icon-pocaoVida.png" class="icons" />  <strong>@Model.PocoesVida</strong> <p class="MensagemOutro" display="inline-block">@Model.MensagemPocao</p>
                 </div>
@@ -108,78 +122,86 @@
             }
             else
             {
-                <div class="text-right">
-                    <p>@Model.MensagemAccao</p>
-                </div>
+                <div class="areajogavel">
+                    <div class="text-right">
+                        <div>
+                            <p class="MensagemAccao">@Model.MensagemAccao</p>
+                        </div>
+                        <div>
+                            <p class="MensagemAccaoMonstro">@Model.MensagemAccaoMonstro</p>
+                        </div>
+                        <div>
+                            <p class="MensagemAccaoFuga"> @Model.MensagemAccaoFuga</p>
+                        </div>
 
-                <div class="text-right">
-                    @if (Model.EncontradoItem == true)
-                    {
-                        <img src="~/images/Icons/icon-surpresa.png" class="iconsItems" />
-                    }
-                    @if (Model.EncontradoTrevo == true)
-                    {
-                        <img src="~/images/Icons/icon-luck.png" class="iconsItems" />
-                    }
-                    @if (Model.EncontradoPocao == true)
-                    {
-                        <img src="~/images/Icons/icon-pocaoVida.png" class="iconsItems" />
-                    }
-
-                </div>
-                @if (Model.EncontradoGato == true)
-                {
-                    <audio autoplay>
-                        <source src="~/sound/cat audio.mp3">
-                    </audio>
-                    <div class="imagemgatopreto">
-                        <img src="~/images/Icons/icon-gatopreto.png" />
                     </div>
-                }
-
-
-                @if (Model.Monstro == true)
-                {
-                    if (Model.UltimaAccao != PlayerAction.Attack && Model.UltimaAccao != PlayerAction.DrinkPotion)
-                    {
-                        <audio autoplay>
-                            <source src="~/sound/Doh_sound.mp3">
-                        </audio>
-                    }
 
                     <div class="text-right">
-                        <img src="~/images/Icons/icon-vida.png" class="iconsMonstro" /> <strong>@Model.PontosVidaMonstro</strong> <p class="MensagemDano">@Model.MensagemDano</p>
-                        <img src="~/images/Icons/icon-luck.png" class="iconsMonstro" /> <strong>@Model.PontosSorteMonstro</strong>
-                        <img src="~/images/Icons/icon-forca.png" class="iconsMonstro" /> <strong>@Model.PontosAtaqueMonstro</strong>
-                        <p class="MensagemMeuAtaque">@Model.MensagemMeuAtaque</p>
-                    </div>
+                        @if (Model.EncontradoItem == true)
+                        {
+                            <img src="~/images/Icons/icon-surpresa.png" class="iconsItems" />
+                        }
+                        @if (Model.EncontradoTrevo == true)
+                        {
+                            <img src="~/images/Icons/icon-luck.png" class="iconsItems" />
+                        }
+                        @if (Model.EncontradoPocao == true)
+                        {
+                            <img src="~/images/Icons/icon-pocaoVida.png" class="iconsItems" />
+                        }
 
-                    <!--Imagem do Monstro-->
-                    @if (Model.MensagemDano != "" && Model.MensagemDano != "Miss")
+                    </div>
+                    @if (Model.EncontradoOuro == true)
                     {
-                        <div>
-                            <img src="~/images/Inimigos/SideShowBob-bruised.png" class="monstro" />
+                        <div class="text-right inline-block">
+                            <img src="~/images/Icons/icon-ouro.png" class="iconsGold" />
                         </div>
                     }
-                    else
+                    </div>
+                    @if (Model.EncontradoGato == true)
                     {
-                        <div>
-                            <img src="~/images/Inimigos/SideShowBob.png" class="monstro" />
+                        <audio autoplay>
+                            <source src="~/sound/cat audio.mp3">
+                        </audio>
+                        <div class="imagemgatopreto">
+                            <img src="~/images/Icons/icon-gatopreto.png" />
                         </div>
                     }
-                }
-            }
-            @if (Model.LeveiDano == true)
-            {
-                <div class="puttop"><img src="~/images/Contextual/blood.png" class="imagemblood" /></div>
-            }
-            @if (Model.EncontradoOuro == true)
-            {
-                <div class="text-right">
-                    <img src="~/images/Icons/icon-ouro.png" class="iconsGold" />
+
+
+
+                    @if (Model.Monstro == true)
+                    {
+                        if (Model.UltimaAccao != PlayerAction.Attack && Model.UltimaAccao != PlayerAction.DrinkPotion)
+                        {
+                            <audio autoplay>
+                                <source src="~/sound/Doh_sound.mp3">
+                            </audio>
+                        }
+
+                        <!--Imagem do Monstro-->
+                        @if (Model.MensagemDano != "" && Model.MensagemDano != "MISS")
+                        {
+                            <div>
+
+                                <img src="~/images/Inimigos/SideShowBob-bruised.png" class="monstro" />
+                            </div>
+                        }
+                        else
+                        {
+                            <div>
+
+                                <img src="~/images/Inimigos/SideShowBob.png" class="monstro" />
+                            </div>
+                        }
+                    }
+                    }
+                    @if (Model.LeveiDano == true)
+                    {
+                        <div class="puttop text-right"><img src="~/images/Contextual/blood.png" class="imagemblood" /></div>
+                    }
+
                 </div>
-            }
-        </div>
         <div class="col-sm-3 text-center">
             <form action="AccaoJogo" method="post">
                 @if (Model.Monstro == false)
