--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -18,18 +18,14 @@ body {
     background-repeat: no-repeat;
 }
 
-
-
-
-/*
-    icon de vida
-*/
-/*Fazer colunas responsivas*/
-
-.page-wrapper {
-    margin: 10px;
+/*tornar imagens responsivas*/
+img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* para funcionar em ie8 */
 }
 
+/*Fazer colunas responsivas*/
 .row {
     display: flex;
     flex-direction: row;
@@ -66,7 +62,6 @@ body {
     height: 27%;
     width: 27%;
     margin-left: 30px;
-    margin-top: 2px;
 }
 
 .iconsItems {
@@ -75,11 +70,7 @@ body {
     margin: 2px;
 }
 
-.iconsMonstro {
-    height: 5%;
-    width: 5%;
-    margin: 2px;
-}
+
 
 .iconMoeda {
     margin-top:25%;
@@ -107,7 +98,7 @@ body {
 
 .BotoesJogo {
     width: 50%;
-    height: 20%;
+    height:20%;
     margin: 1px;
     background: none;
     border-color: none;
@@ -212,21 +203,21 @@ input[type='radio'] {
     padding-right: 5px;
 }
 
+
+
 .monstro {
     position: fixed;
-    width: 36%;
-    height: 70%;
+    width: 22%;
     bottom: 10px;
-    left: 16%;
-    z-index:-1;
+    left: 23%;
+    z-index: -1;
+    display:inline-block;
 }
 
 .areajogavel {
-    background-image: url(../images/Rooms/AreaJogo.jpg);
-    background-repeat: no-repeat;
     width: 100%;
-    height: 500px;
-    margin-top: 60px;
+    height: 100%;
+    margin-top: 8%;
 }
 
 .areadados {
@@ -237,7 +228,7 @@ input[type='radio'] {
 .areabotoes {
     width: 100%;
     height: 100%;
-    margin-top: 40px;
+    margin-top: 20%;
 }
 
 /* headers com estilo */
@@ -270,13 +261,13 @@ h3 {
     color:chartreuse;
     font-family: Verdana;
     display: inline-block;
-    font-size:18px;
+    font-size:21px;
 }
 .MensagemVidaNeg {
     color: deeppink;
     font-family: Verdana;
     display: inline-block;
-    font-size: 18px;
+    font-size: 21px;
 }
 .MensagemPassarTempo {
     color:fuchsia;
@@ -291,24 +282,47 @@ h3 {
     font-size: 18px;
 }
 .MensagemDano {
-    color:crimson;
+    color:deeppink;
     font-family: Verdana;
     font-size: 20px;
-    margin-left: 18px;
     display: inline-block;
+    font-weight:bold;
 }
 .MensagemMeuAtaque {
     color:yellow;
     font-family: Verdana;
-    font-size: 16px;
+    font-size: 18px;
+    top:5px;
     text-shadow:1px 1px 1px black;
+}
+.MensagemAccao {
+    color:aliceblue;
+    font-family: Verdana;
+    font-size: 20px;
+    top:5px;
+    text-shadow: 1px 1px 1px black;
+}
+.MensagemAccaoFuga {
+    color:khaki;
+    font-family: Verdana;
+    font-size: 20px;
+    top: 5px;
+    text-shadow: 1px 1px 1px black;
+}
+
+.MensagemAccaoMonstro {
+    color:darksalmon;
+    font-family: Verdana;
+    font-size: 20px;
+    top: 5px;
+    text-shadow: 0.8px 0.8px 0.8px black;
 }
 
 .imagemblood {
     background-size: cover;
-    opacity: 0.4;
-    width:70%;
-}
+    opacity: 0.6;
+    width:73%;
+ }
 .puttop {
     position:fixed;
     top: 25%;
@@ -322,11 +336,12 @@ h3 {
     width: 50%;
 }
 .iconsGold {
-    height: 18%;
-    width: 15%;
+    height: 13%;
+    width: 13%;
     margin: 2px;
 }
 .mensagemSaida {
     position:relative;
     z-index:3;
 }
+
