--- a/SetepassosPRJ/Views/Home/HiScores.cshtml
+++ b/SetepassosPRJ/Views/Home/HiScores.cshtml
@@ -31,7 +31,7 @@
                             {
                                 @:Vitoria
                             }
-                            else if (jogo.ResultadoAccao == Result.GameHasEnded && jogo.PontosVida <= 0 || jogo.ResultadoAccao == Result.Success && jogo.PontosVida <= 0)
+                            else if (jogo.ResultadoAccao == Result.GameHasEnded && jogo.PontosVida <= 0 || jogo.ResultadoAccao == Result.Success && jogo.PontosVida <= 0 || jogo.PocoesVida <= 0)
                             {
                                 @:Derrota
                             }
