Aparecer posição do Rank

--- a/SetepassosPRJ/Views/Home/HiScores.cshtml
+++ b/SetepassosPRJ/Views/Home/HiScores.cshtml
@@ -23,7 +23,7 @@
                 @foreach (Jogo jogo in Model)
                 {
                     <tr>
-                        <td>Posição</td>
+                        <td>@jogo.Posicao</td>
                         <td>@jogo.Nome</td>
                         <td>@jogo.MoedasOuro</td>
                         <td>
