Alguns items estavam a contar mal. Ainda é necessário saber se os itens que sobem status qd já temos 5 pontos desse status contam como item encontrado.

--- a/SetepassosPRJ/Views/Home/HiScores.cshtml
+++ b/SetepassosPRJ/Views/Home/HiScores.cshtml
@@ -47,7 +47,7 @@
                         </td>
                         <td>@jogo.NumInimigosDerrotados</td>
                         <td> @jogo.NumFugas </td>
-                        <td>@jogo.NumAreasInvestigadas</td>
+                        <td>@jogo.TotalAreasExaminadas</td>
                         <td>@jogo.NumItensEncontrados</td>
                         <td>@jogo.PocoesObtidas</td>
                         <td>@jogo.PocoesUsadas</td>
