Programado o botão desistir, e hi scores para mostrar quem desistiu. Programado botão de beber poções para só aparecer caso existam poçoes para beber.

--- a/SetepassosPRJ/Views/Home/HiScores.cshtml
+++ b/SetepassosPRJ/Views/Home/HiScores.cshtml
@@ -31,9 +31,13 @@
                             {
                                 @:Vitoria
                             }
-                            else if (jogo.ResultadoAccao == Result.GameHasEnded && jogo.PontosVida <= 0 || jogo.ResultadoAccao == Result.Success && jogo.PontosVida <= 0 || jogo.PocoesVida <= 0)
+                            else if (jogo.ResultadoAccao == Result.GameHasEnded && jogo.PontosVida <= 0 || jogo.ResultadoAccao == Result.Success && jogo.PontosVida <= 0)
                             {
                                 @:Derrota
+                            }
+                           @if (jogo.Desistiu == true)
+                            {
+                                @:Desistiu
                             }
                         </td>
                         <td>@if (jogo.Chave)
