Adicionada mensagem quando area é examinada mas não se encontra nada

--- a/SetepassosPRJ/Views/Home/HiScores.cshtml
+++ b/SetepassosPRJ/Views/Home/HiScores.cshtml
@@ -25,7 +25,7 @@
                     <tr>
                         <td>@jogo.Posicao</td>
                         <td>@jogo.Nome</td>
-                        <td>@jogo.MoedasOuro</td>
+                        <td>@jogo.MoedasOuroTotal</td>
                         <td>
                             @if (jogo.ResultadoAccao == Result.SuccessVictory)
                             {
