--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -69,6 +69,13 @@ img {
     width: 5%;
     margin: 2px;
 }
+
+.iconsItemsBonus {
+    height: 8%;
+    width: 8%;
+    margin: 2px;
+    display:inline-block;
+}
 .iconsMonstro {
     width: 10%;
     margin: 2px;
