Alterada apresentacao da pagina de bonus do jogo. Retirado os ifs para detetar que imagem de perfil mostrar no jogo. Alterada pagina de hiscores para mostrar mensagem caso nao existam hiscores.

--- a/SetepassosPRJ/Views/Home/HiScores.cshtml
+++ b/SetepassosPRJ/Views/Home/HiScores.cshtml
@@ -2,6 +2,13 @@
 @{
     ViewData["Title"] = "HiScores";
 }
+
+@if (Model.Count == 0)
+{
+    <h2>Não existem jogos registados.</h2>
+}
+else
+{
     <div class="text-center">
         <table id="tabela" class="table table-condensed">
             <thead>
@@ -36,7 +43,7 @@
                                 @:Derrota
                             }
                            @if (jogo.Desistiu == true)
-                            {
+                           {
                                 @:Desistiu
                             }
                         </td>
@@ -60,3 +67,4 @@
             </tbody>
         </table>
     </div>
+}
