--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -1,9 +1,9 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 
-
+/*era 90%*/
 html, body {
-    height: 90%;
+    height: 100%;
 }
 
 body {
@@ -14,7 +14,7 @@ body {
     font-size: 15px;
     letter-spacing: 1px;
     background-image: url('../images/Layout/Entrance v2.jpg');
-    background-size: cover;
+    background-size:cover;
     background-repeat: no-repeat;
 }
 
@@ -272,11 +272,11 @@ h3 {
     color: darkcyan;
 }
 
+/*tinhamos marign-top: 2px;*/
 .fundoJogo {
     background-image: url(../images/Rooms/Room1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    margin-top: 2px;
     position: relative;
 }
 
