Algumas alterações na view dos dados

--- a/SetepassosPRJ/Views/Jogo/DadosJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/DadosJogo.cshtml
@@ -55,7 +55,8 @@
         <p class="MensagemBonus"><img src="~/images/Icons/icon-moeda.png" class="iconsitemsBonus" /> Total Moedas: <strong>@Model.MoedasOuroTotal</strong></p>
         </div>
     </div>
-    <br />
+
+    @*<br />
     <div class="row">
         <div class="col-sm-12 text-center">
              <h3>Pode sempre verificar o seu score na página de HiScores</h3>
@@ -65,5 +66,5 @@
             <a asp-controller="Home" asp-action="HiScores" class="btn btn-info">HiScores</a>
             <a asp-action="CriarJogo" class="btn btn-primary">Criar Jogo</a>
         </div>
-    </div>
+    </div>*@
 
