--- a/SetepassosPRJ/Views/Home/Index.cshtml
+++ b/SetepassosPRJ/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
             <h1>Hi-Scores Top 3</h1>
             @if (Model.Count == 0)
             {
-                <p>Sem Scores</p>
+                <p>Ainda sem scores disponíveis.</p>
             }
             else
             {
