--- a/SetepassosPRJ/Views/Jogo/DadosJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/DadosJogo.cshtml
@@ -56,15 +56,13 @@
         </div>
     </div>
 
-    @*<br />
     <div class="row">
         <div class="col-sm-12 text-center">
              <h3>Pode sempre verificar o seu score na página de HiScores</h3>
         </div>
-        
-        <div class="col-sm-12 text-center">
+              <div class="col-sm-12 text-center">
             <a asp-controller="Home" asp-action="HiScores" class="btn btn-info">HiScores</a>
             <a asp-action="CriarJogo" class="btn btn-primary">Criar Jogo</a>
         </div>
-    </div>*@
+    </div>
 
