Alteração view dos dados de jogo.

--- a/SetepassosPRJ/Views/Jogo/DadosJogo.cshtml
+++ b/SetepassosPRJ/Views/Jogo/DadosJogo.cshtml
@@ -56,7 +56,7 @@
         </div>
     </div>
 
-    <div class="row">
+    @*<div class="row">
         <div class="col-sm-12 text-center">
              <h3>Pode sempre verificar o seu score na página de HiScores</h3>
         </div>
@@ -64,5 +64,5 @@
             <a asp-controller="Home" asp-action="HiScores" class="btn btn-info">HiScores</a>
             <a asp-action="CriarJogo" class="btn btn-primary">Criar Jogo</a>
         </div>
-    </div>
+    </div>*@
 
