--- a/SetepassosPRJ/wwwroot/css/site.css
+++ b/SetepassosPRJ/wwwroot/css/site.css
@@ -11,8 +11,8 @@ body {
     padding-bottom: 10px;
     color: ghostwhite;
     font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 15px;
-    letter-spacing: 1px;
+    font-size: 1.1vw;
+    letter-spacing: 0.7px;
     background-image: url('../images/Layout/Entrance v2.jpg');
     background-size:cover;
     background-repeat: no-repeat;
@@ -38,6 +38,13 @@ img {
     flex-direction: column;
     flex-basis: 100%;
     flex: 1;
+}
+.columncenter {
+    display: inline-block;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+    align-self: center;
 }
 
 /*Botao iniciar jogo no index*/
@@ -71,11 +78,17 @@ img {
 }
 
 .iconsItemsBonus {
-    height: 8%;
-    width: 8%;
-    margin: 2px;
+    height: 7%;
+    width: 7%;
+    margin: 0.5px;
     display:inline-block;
 }
+.iconsItemBonusMoeda {
+    height: 11%;
+    width: 11%;
+    display: inline-block;
+}
+
 .iconsMonstro {
     width: 10%;
     margin: 2px;
@@ -272,6 +285,13 @@ h3 {
     color: darkcyan;
 }
 
+h4 {
+    color:bisque;
+    font-size: 1.3vw;
+    letter-spacing: 1px;
+    text-shadow: 0 0 2px black;
+}
+
 /*tinhamos marign-top: 2px;*/
 .fundoJogo {
     background-repeat: no-repeat;
@@ -381,9 +401,7 @@ h3 {
 .MensagemBonus {
     color: darksalmon;
     font-family: Verdana;
-    font-size: 0.9vw;
-    top: 5px;
+    font-size: 1vw;
     text-shadow: 0.8px 0.8px 0.8px black;
-    vertical-align: middle;
 }
 
